package rubo.dagger2coffee.model;

public interface Heater {
    void on();

    void off();

    boolean isHot();
}
