package rubo.dagger2coffee.model;

public interface Pump {
    void pump();
}
